[package]
name = "nextgen-ida"
version = "0.1.0"
edition = "2021"
authors = ["NextGen RE Team"]
description = "A Next-Generation High-Performance Disassembler and Pattern Scanner"

[dependencies]
# Zydis is the fastest and most modern x86/x64 disassembler engine
zydis = "4.0.0"
# Object crate allows parsing PE, ELF, and Mach-O headers cleanly
object = "0.32.2"
# Colored output for terminal UI / logging
colored = "2.1.0"
